# smithsonian-mcp

./: .dockerignore  .env.example  .gitignore  .npmignore  CLAUDE.md  Dockerfile  INTEGRATION_GUIDE.md  LICENSE.md  README.md  TROUBLESHOOTING.md  claude-desktop-config.json  find_valid_objects.py  mcpo-config.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.json  setup.ps1  setup.sh  smithsonian-mcp-workspace.code-workspace  test_mcpo_fix.py  test_object_details.py
.github/: dependency-submission.yml
.github/workflows/: ci.yml  security.yml
config/: requirements.txt  setup.ps1  setup.sh
dev/documentation/: API_Documentation.html  API_Documentation.md  EDAN_IMM_OBJECT_RECORDS_1.09.md  json_format.html  json_format.md
examples/: mcpo-config.json  test-api-connection.py
scripts/: sync-requirements.js  verify-setup.py
scripts/dev/: collect_museum_object_types.py  (+8 more)
smithsonian_mcp/: __init__.py  _version.py  api_client.py  app.py  config.py  constants.py  context.py  main.py  models.py  museum_data.py  prompts.py  resources.py  server.py  tools.py  utils.py  write_version.py
tests/: bert_puppet_response.json  check_bert_ernie_in_muppet.py  find_bert_ernie.py  find_valid_objects.py  standalone_test_mcpo_fix.py  standalone_test_object_details.py  test_api_client_error_handling.py  test_basic.py  test_comprehensive_pagination.py  test_key_obfuscation.py  test_mcp_integration.py  test_muppet_pagination.py  test_museum_highlights_on_view.py  test_on_view.py  test_pagination_fix.py  test_stats_fallback.py  test_tools_get_object_url.py  test_tools_simple_explore.py  test_utils.py  thunder_god_response.json
