[project]
name = "smithsonian-mcp"
version = "0.2.0"
description = "A Model Context Protocol (MCP) server that provides AI assistants with access to the Smithsonian Institution's Open Access collections."
readme = "README.md"
requires-python = ">=3.10.0"
authors = [
    {name = "Justin Molano", email = "justinmolano2@gmail.com"}
]
license = {text = "MIT"}
keywords = [
    "mcp",
    "model-context-protocol",
    "smithsonian",
    "museum",
    "api",
    "open-access",
    "collections",
    "ai",
    "claude",
    "anthropic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Production dependencies only
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-decouple>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/molanojustin/smithsonian-mcp"
Repository = "https://github.com/molanojustin/smithsonian-mcp.git"
Issues = "https://github.com/molanojustin/smithsonian-mcp/issues"

# Development dependencies (not published to PyPI)
[dependency-groups]
dev = [
    "black>=23.0.0",
    "pylint>=2.17.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mcp-inspector>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["smithsonian_mcp"]
